# Segmenter_Clients_Ecom

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RESUME_PROJET.txt  ROADMAP.md  app.py  codecov.yml  config.yaml  evaluate.py  predict.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml  maintenance.yml  pr-preview.yml  release.yml
.streamlit/: config.toml
app/: __init__.py  app.py  utils.py
app/pages/: 1_Overview.py  2_Segments.py  3_Explorer.py  4_About.py
data/processed/: README.md  customers_rfm.csv  customers_rfm.parquet
data/raw/: README.md
docs/: ARCHITECTURE.md  CLUSTER_PROFILES.md  CONTRIBUTING.md  DEPLOYMENT.md  Makefile  SPECIFICATIONS_TECHNIQUES.md  USAGE_GUIDE.md  presentation_originale.pptx
docs/source/: conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst
docs/source/api/: data.rst  features.rst  models.rst  visualization.rst
docs/source/usage/: api.rst  cli.rst  dashboard.rst
notebooks/: 01_data_exploration.ipynb  02_clustering_experiments.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb  03_temporal_stability_simulation.ipynb  04_results_analysis.ipynb  05_maintenance.ipynb  README.md
scripts/: download_data.sh  prepare_dashboard_data.py  setup.sh  train.sh
src/: __init__.py  cli.py  config.py
src/data/: __init__.py  data_loader.py  loader.py  preprocessor.py
src/evaluation/: metrics.py
src/features/: __init__.py  rfm.py  rfm_engineering.py
src/models/: __init__.py  clustering.py  evaluation.py
src/monitoring/: __init__.py  drift.py  registry.py
src/visualization/: __init__.py  plots.py
tests/: __init__.py  conftest.py  test_app_utils.py  test_cli.py  test_clustering.py  test_evaluation.py  test_integration.py  test_loader.py  test_monitoring.py  test_preprocessor.py  test_rfm.py  test_visualization.py
